data/derived/comb/progs/unify/prog0684.ml.out
Characters 119-142:
  num + additivePersistence num;;
        ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
